# ScreenSpot-Pro-GUI-Grounding

./: .gitignore  =4.40.0  README.md  download_dataset.py  enhanced_agent_function_call.py  enhanced_prompt.py  eval_screenspot_pro.py  pyproject.toml  readme.md  requirements.txt  run_qwen25vl.sh  run_qwen2vl.sh  run_ss_pro.sh  run_ss_pro_cn.sh  やり方.md
models/: ariaui.py  cogagent.py  cogagent24.py  fuyu.py  gpt4x.py  internvl.py  minicpmv.py  osatlas4b.py  osatlas7b.py  qwen1vl.py  qwen25vl.py  qwen25vlsft.py  qwen2vl.py  qwen_vl_utils.py  seeclick.py  showui.py  uground.py
models/llava/: __init__.py  conversation.py  mm_utils.py
models/llava/eval/: model_vqa.py
models/llava/model/: builder.py  llava_arch.py  utils.py
models/llava/serve/: cli.py  gradio_web_server.py  model_worker.py  new_gws.py
models/llava/train/: llava2parquet_to_Luke.py  llava_trainer.py  train_s3.py  train_together.py
results/: qwen25vl.json  qwen25vl.json.partial  qwen25vl1.json.partial  qwen25vldevice.json.partial  qwen25vlmobile.json.partial  qwen25vlsft.json  qwen25vlsft.json.partial  qwen2vl.json  qwen2vl.json.partial
utils/: __init__.py  agent_function_call.py  mobile_computer_tools.py
