[tool.poetry]
name = "screenspot-pro-gui-grounding"
version = "0.1.0"
description = "ScreenSpot Pro GUI Grounding"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = ">=2.0.0"
transformers = ">=4.40.0"
pillow = "^10.2.0"
tqdm = "^4.66.2"
accelerate = "^1.5.2"
qwen-vl-utils = "^0.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
